--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - docker --version
-      - echo "Account ID: 316497517854"
-      - echo "Region: ap-south-1"
+      - echo "Logging into ECR at: 316497517854.dkr.ecr.ap-south-1.amazonaws.com"
       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 316497517854.dkr.ecr.ap-south-1.amazonaws.com
   build:
     commands:
