--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,4 +25,5 @@ phases:
       - printf '[{"name":"my-app-container","imageUri":"%s"}]' 316497517854.dkr.ecr.ap-south-1.amazonaws.com/my-app:latest > imagedefinitions.json
 
 artifacts:
-  files: imagedefinitions.json
+  files:
+    - imagedefinitions.json
