--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - echo "Logging into Docker Hub..."
+      - echo "$DOCKER_HUB_PASSWORD" | docker login --username "$DOCKER_HUB_USERNAME" --password-stdin
       - echo "Logging into Amazon ECR..."
       - aws --version
       - docker --version
